# window_mod

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
build_check/: CMakeCache.txt
inject_dll/: CMakeLists.txt  dllmain.cpp
inject_launcher/: CMakeLists.txt  launcher_main.cpp
installer/: inno.iss  window_mod.iss  window_mod.wxs
src/: CMakeLists.txt  injector.cpp  injector.h  logger.cpp  logger.h  main.cpp  resource.h  window_list.cpp  window_list.h  window_mod.rc  window_ops.cpp  window_ops.h
